test/typecheck/errors/add-set-wrong-val.boa
o: output sum of int;
o << 1;

s: set of string;
cf: ChangedFile;
add(s, cf);
